# mc-mcp-server

./: (仅供参考)main_server.py  .gitignore  LICENSE  README.md  main.py  main_server.py  mcp_frontend_server.py  mcp_only_server.py  pyproject.toml  requirements.txt  test_mcp_client.py  test_mcp_params.py  todolist.md
.cursor/rules/: project-rule.mdc
config/: default.json
docs/: DEBUG_MODE.md  mcp_client_example.md
docs/prd/: development_guidelines.md  index.md  mcp_integration.md  pr.md  technical_architecture.md  websocket_spec.md
resources/: __init__.py  player.py  world.py
server/: __init__.py  agent_server.py  mc_server.py  mcp_server.py
server/utils/: __init__.py  auth.py  llm.py  logging.py  tools.py
test/: test_mcp_client.py  test_simple_mcp.py  test_tool_params.py
tools/: __init__.py  commands.py  messages.py  script_api.py
